syntax = "proto3";

message Pinger {
    uint64 start_timestamp = 1;
    uint32 wg_port = 2; // should be 16 bits
    oneof ping_source_address {
        fixed32 v4 = 3;
        bytes v6 = 4;
    }
}

message Ponger {
    uint64 start_timestamp = 1;
    uint32 wg_port = 2;
    oneof ping_source_address {
        fixed32 v4 = 3;
        bytes v6 = 4;
    }
    uint32 ponging_ep_provider = 5;
}